--- a/examples/emulation/extclient/omnetpp.ini
+++ b/examples/emulation/extclient/omnetpp.ini
@@ -8,13 +8,15 @@ tkenv-default-run = 0
 **.testing = false
 **.testTimeout = 0
 
-**.networkConfiguratorModule = ""
+#**.networkConfiguratorModule = ""
+
+*.peer.hasSctp = true
 
 # sctp apps
 **.peer.numApps=2
-**.peer.app[*].typename="SCTPServer"
+**.peer.app[*].typename="SctpServer"
 **.peer.app[0].address="10.1.1.1"
-**.peer.app[0].localPort=7
+**.peer.app[0].localPort=5001
 **.peer.app[1].localPort=9
 **.peer.app[0].waitToClose = 0s #Time waited to close the connection after the last packet has been sent.
 #**.peer.app[0].idleInterval = truncnormal(1,1) ## FIXME undefined parameter
@@ -24,5 +26,9 @@ tkenv-default-run = 0
 **.peer.app[0].echo=true
 **.peer.app[0].numPacketsToReceivePerClient = 0  # 0: number of packets to receive is not known
 
-**.ext[0].filterString = "(sctp or icmp) and ip dst host 10.1.1.1"
-**.ext[0].device = "eth0"
+**.ext[0].ext.filterString = "(sctp or icmp) and ip dst host 10.1.1.1"
+**.ext[0].ext.device = "en0"
+
+**.sctp.crcMode = "computed"
+**.udp.crcMode = "computed"
+**.ipv4.**.crcMode = "computed"
