--- a/examples/emulation/traceroute/omnetpp.ini
+++ b/examples/emulation/traceroute/omnetpp.ini
@@ -27,7 +27,7 @@ tkenv-default-run = 0
 # unnecessary packets being handled by the simulation.
 # For more detailed info about filtering, see tcpdump documentation at www.tcpdump.org
 #filter-string = "ip dst host 10.1.1 or dst host 10.1.2 or dst host 10.1.3 or dst host 10.1.4"
-**.ext[0].filterString = "(udp or icmp) and (dst host 10.2 or dst host 10.3)"
-**.ext[0].device = "eth0"
+**.ext[0].ext.filterString = "(udp or icmp) and (dst host 10.2 or dst host 10.3)"
+**.ext[0].ext.device = "en0"
 
 
