--- a/examples/emulation/sctp/omnetpp.ini
+++ b/examples/emulation/sctp/omnetpp.ini
@@ -10,10 +10,10 @@ tkenv-default-run = 0
 
 **.networkConfiguratorModule = ""
 
-**.ext[0].ext.filterString = "(sctp or icmp) and ip dst host 10.1.1.1"
+#**.ext[0].ext.filterString = "(sctp or icmp) and ip dst host 10.1.1.1"
+**.ext[0].ext.filterString = "sctp and ip dst host 10.1.1.1"
 **.ext[0].ext.device = "en0"
 **.ext[0].ext.mtu = 1500B
-**.sctp.iData = true
 
 **.sctp.crcMode = "computed"
 **.udp.crcMode = "computed"
@@ -34,7 +34,7 @@ tkenv-default-run = 0
 **.peer.numApps = 1
 **.peer.app[*].typename = "SctpClient"
 **.peer.app[0].localAddress = "10.1.1.1"
-**.peer.app[0].connectAddress = "10.0.1.119"
+**.peer.app[0].connectAddress = "10.0.1.110"
 **.peer.app[0].connectPort = 5001
 **.peer.app[0].startTime = exponential(2s)
 **.peer.app[0].numRequestsPerSession = 30
