Examples: Added superpositioning mobility example.

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -292,3 +292,64 @@ description = "mass+placerandomly"
 *.numHosts = 2
 **.host*.mobilityType = "TurtleMobility"
 **.host*.mobility.turtleScript = xmldoc("turtle.xml", "movements//movement[@id='6']")
+
+[Config SuperpositioningMobility]
+network = MobileNetwork
+description = "superpositioning"
+*.numHosts = 8
+
+# mobility visualizer shows velocity and orientation
+*.hasVisualizer = true
+*.visualizer.mobilityVisualizer.moduleFilter = "**.mobility" # filter for host mobilities, ignore mobility superposition elements
+*.visualizer.mobilityVisualizer.displayMovementTrails = true
+*.visualizer.mobilityVisualizer.displayOrientations = true
+*.visualizer.mobilityVisualizer.displayVelocities = true
+
+# last host stays in the center of the playground
+**.host[7].mobilityType = "StationaryMobility"
+**.host[7].mobility.initialX = 300m
+**.host[7].mobility.initialY = 200m
+**.host[7].mobility.initialZ = 0m
+
+# other hosts move around the playground using mobility superpositon
+**.host[*].mobilityType = "SuperpositioningMobility"
+**.host[*].mobility.numElements = 4
+
+# other hosts are intiallly positioned in static concentric circles
+**.host[*].mobility.element[0].typename = "StaticConcentricMobility"
+**.host[*].mobility.element[0].visualRepresentation = "^.^"
+**.host[*].mobility.element[0].numHosts = 7
+
+# other hosts are also moving around in a larger circle following host[0]
+**.host[0].mobility.element[1].typename = "CircleMobility"
+**.host[0].mobility.element[1].faceForward = false
+**.host[0].mobility.element[1].cx = 300m
+**.host[0].mobility.element[1].cy = 200m
+**.host[0].mobility.element[1].r = 150m
+**.host[0].mobility.element[1].speed = 40mps
+**.host[*].mobility.element[1].typename = "AttachedMobility" # other hosts follow the movement of the 2nd element host[0] mobility superposition 
+**.host[*].mobility.element[1].mobilityModule = "^.^.^.host[0].mobility.element[1]"
+
+# other hosts are also slightly moving randomly around their position in the group
+**.host[*].mobility.element[2].typename = "MassMobility"
+**.host[*].mobility.element[2].faceForward = false
+**.host[*].mobility.element[2].initFromDisplayString = false
+**.host[*].mobility.element[2].initialX = 0m
+**.host[*].mobility.element[2].initialY = 0m
+**.host[*].mobility.element[2].initialZ = 0m
+**.host[*].mobility.element[2].constraintAreaMinX = 0m
+**.host[*].mobility.element[2].constraintAreaMinY = 0m
+**.host[*].mobility.element[2].constraintAreaMaxX = 50m # limiting the random movement
+**.host[*].mobility.element[2].constraintAreaMaxY = 50m # limiting the random movement
+**.host[*].mobility.element[2].changeInterval = truncnormal(2s, 1s)
+**.host[*].mobility.element[2].changeAngleBy = normal(0deg, 30deg)
+**.host[*].mobility.element[2].speed = truncnormal(3mps, 1mps)
+
+# other hosts are facing towards the last host sitting in the center
+**.host[*].mobility.element[3].typename = "FacingMobility"
+**.host[*].mobility.element[3].initFromDisplayString = false
+**.host[*].mobility.element[3].initialX = 0m
+**.host[*].mobility.element[3].initialY = 0m
+**.host[*].mobility.element[3].initialZ = 0m
+**.host[*].mobility.element[3].sourceMobility = "^" # the superposition is the source
+**.host[*].mobility.element[3].targetMobility = "^.^.^.host[7].mobility" # last host is the target
