--- a/examples/emulation/extclient/omnetpp.ini
+++ b/examples/emulation/extclient/omnetpp.ini
@@ -8,27 +8,36 @@ tkenv-default-run = 0
 **.testing = false
 **.testTimeout = 0
 
-#**.networkConfiguratorModule = ""
-
-*.peer.hasSctp = true
-
-# sctp apps
-**.peer.numApps=2
-**.peer.app[*].typename="SctpServer"
-**.peer.app[0].address="10.1.1.1"
-**.peer.app[0].localPort=5001
-**.peer.app[1].localPort=9
-**.peer.app[0].waitToClose = 0s #Time waited to close the connection after the last packet has been sent.
-#**.peer.app[0].idleInterval = truncnormal(1,1) ## FIXME undefined parameter
-**.peer.app[0].queueSize = 0 #Size of sendQueue before App is notified to send new data
-#**.peer.app[0].replyDelay=0 ## FIXME undefined parameter
-**.peer.app[0].echoDelay=0
-**.peer.app[0].echo=true
-**.peer.app[0].numPacketsToReceivePerClient = 0  # 0: number of packets to receive is not known
+**.networkConfiguratorModule = ""
 
 **.ext[0].ext.filterString = "(sctp or icmp) and ip dst host 10.1.1.1"
-**.ext[0].ext.device = "en0"
+**.ext[0].ext.device = "en0" # Name of the gateway interface of the machine the simulation is running on
+**.ext[0].ext.mtu = 1500B
 
 **.sctp.crcMode = "computed"
 **.udp.crcMode = "computed"
 **.ipv4.**.crcMode = "computed"
+
+[Config Server]
+sim-time-limit=50s
+# sctp apps
+**.peer.hasSctp = true
+**.peer.numApps=1
+**.peer.app[*].typename="SctpServer"
+**.peer.app[0].localAddress="10.1.1.1"
+**.peer.app[0].localPort=5001
+**.peer.app[0].numPacketsToReceivePerClient = 0  # 0: number of packets to receive is not known
+
+
+[Config Client]
+**.peer.hasSctp = true
+**.peer.numApps = 1
+**.peer.app[*].typename = "SctpClient"
+**.peer.app[0].localAddress = "10.1.1.1"
+**.peer.app[0].connectAddress = "10.0.1.110" # Put in address of remote server
+**.peer.app[0].connectPort = 5001
+**.peer.app[0].startTime = exponential(2s)
+**.peer.app[0].numRequestsPerSession = 30
+**.peer.app[0].requestLength = 1000
+**.peer.app[0].thinkTime = 0 #exponential(1s)
+**.peer.app[0].queueSize = 0
