--- a/examples/emulation/traceroute/omnetpp.ini
+++ b/examples/emulation/traceroute/omnetpp.ini
@@ -1,6 +1,7 @@
 [General]
 scheduler-class = "inet::cSocketRTScheduler"
 network = Traceroute
+sim-time-limit=50s
 
 cmdenv-express-mode = true
 tkenv-default-run = 0
@@ -18,6 +19,10 @@ tkenv-default-run = 0
 # ip settings
 **.ip.procDelay = 10us
 **.router.forwarding = true
+
+**.udp.crcMode = "computed"
+**.ipv4.**.crcMode = "computed"
+**.icmp.crcMode = "computed"
 
 # IPProcessing: processing delays for all nodes
 **.routing.procDelay = 0.2 us
