Example: Added AttachedMobility example.

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -293,6 +293,31 @@ description = "mass+placerandomly"
 **.host*.mobilityType = "TurtleMobility"
 **.host*.mobility.turtleScript = xmldoc("turtle.xml", "movements//movement[@id='6']")
 
+[Config AttachedMobility]
+network = MobileNetwork
+description = "attached"
+*.numHosts = 3
+
+# mobility visualizer shows velocity and orientation
+*.hasVisualizer = true
+*.visualizer.mobilityVisualizer.moduleFilter = "**.mobility" # filter for host mobilities, ignore mobility superposition elements
+*.visualizer.mobilityVisualizer.displayMovementTrails = true
+*.visualizer.mobilityVisualizer.displayOrientations = true
+*.visualizer.mobilityVisualizer.displayVelocities = true
+
+# other hosts are also moving around in a larger circle following host[0]
+**.host[0].mobilityType = "CircleMobility"
+**.host[0].mobility.cx = 300m
+**.host[0].mobility.cy = 200m
+**.host[0].mobility.r = 150m
+**.host[0].mobility.speed = 40mps
+
+# other hosts are also moving around in a larger circle following host[0]
+**.host[*].mobilityType = "AttachedMobility"
+**.host[*].mobility.mobilityModule = "^.^.host[0].mobility"
+**.host[1].mobility.offsetX = 50m
+**.host[2].mobility.offsetX = -50m
+
 [Config SuperpositioningMobility]
 network = MobileNetwork
 description = "superpositioning"
