Examples: Enhanced mobility superposition and attachment examples.

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -316,7 +316,9 @@ description = "attached"
 **.host[*].mobilityType = "AttachedMobility"
 **.host[*].mobility.mobilityModule = "^.^.host[0].mobility"
 **.host[1].mobility.offsetX = 50m
+**.host[1].mobility.offsetHeading = 1.57 rad
 **.host[2].mobility.offsetX = -50m
+**.host[2].mobility.offsetHeading = -1.57 rad
 
 [Config SuperpositioningMobility]
 network = MobileNetwork
@@ -352,7 +354,7 @@ description = "superpositioning"
 **.host[0].mobility.element[1].cy = 200m
 **.host[0].mobility.element[1].r = 150m
 **.host[0].mobility.element[1].speed = 40mps
-**.host[*].mobility.element[1].typename = "AttachedMobility" # other hosts follow the movement of the 2nd element host[0] mobility superposition 
+**.host[*].mobility.element[1].typename = "AttachedMobility" # other hosts follow the movement of the 2nd element of host[0]'s mobility superposition 
 **.host[*].mobility.element[1].mobilityModule = "^.^.^.host[0].mobility.element[1]"
 
 # other hosts are also slightly moving randomly around their position in the group
@@ -368,7 +370,7 @@ description = "superpositioning"
 **.host[*].mobility.element[2].constraintAreaMaxY = 50m # limiting the random movement
 **.host[*].mobility.element[2].changeInterval = truncnormal(2s, 1s)
 **.host[*].mobility.element[2].changeAngleBy = normal(0deg, 30deg)
-**.host[*].mobility.element[2].speed = truncnormal(3mps, 1mps)
+**.host[*].mobility.element[2].speed = truncnormal(10mps, 3mps)
 
 # other hosts are facing towards the last host sitting in the center
 **.host[*].mobility.element[3].typename = "FacingMobility"
