NED: Replace @unit(rad) with @unit(deg) in NED files because its more human readable.

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -316,9 +316,9 @@ description = "attached"
 **.host[*].mobilityType = "AttachedMobility"
 **.host[*].mobility.mobilityModule = "^.^.host[0].mobility"
 **.host[1].mobility.offsetX = 50m
-**.host[1].mobility.offsetHeading = 1.57 rad
+**.host[1].mobility.offsetHeading = 90deg
 **.host[2].mobility.offsetX = -50m
-**.host[2].mobility.offsetHeading = -1.57 rad
+**.host[2].mobility.offsetHeading = -90deg
 
 [Config SuperpositioningMobility]
 network = MobileNetwork
