Network: Renamed GenericNetworkLayer to NextHopNetworkLayer.

--- a/examples/inet/hierarchical99/networklayer.ini
+++ b/examples/inet/hierarchical99/networklayer.ini
@@ -27,7 +27,7 @@ network = Hierarchical99
 
 [Config Generic]
 **.networkConfiguratorType = "GenericNetworkConfigurator"
-**.networkLayerType = "GenericNetworkLayer"
+**.networkLayerType = "NextHopNetworkLayer"
 
 **.hasIpv4 = false
 **.hasIpv6 = false
