--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -65,7 +65,7 @@ extends=_IPv6
 [Config _Generic]
 description = base for generic
 **.host[*].hasGn = true
-**.host[*].networkLayerType = "GenericNetworkLayer"
+**.host[*].networkLayerType = "NextHopNetworkLayer"
 **.dymo.routingTableModule = "^.generic.routingTable"
 **.dymo.networkProtocolModule = "^.generic.gnp"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
@@ -81,7 +81,7 @@ description = multiple network protocols
 **.host[*].hasIpv4 = true
 **.host[*].hasIpv6 = true
 **.host[*].hasGn = true
-**.host[*].networkLayerType = "GenericNetworkLayer"
+**.host[*].networkLayerType = "NextHopNetworkLayer"
 
 [Config MultiIPv4]
 description = using Ipv4 on multiple network protocols
