--- a/examples/manetrouting/gpsr/omnetpp.ini
+++ b/examples/manetrouting/gpsr/omnetpp.ini
@@ -53,7 +53,7 @@ description = base config for Ipv6
 
 [Config _Generic]
 description = base config for generic network
-**.networkLayerType = "GenericNetworkLayer"
+**.networkLayerType = "NextHopNetworkLayer"
 **.gpsr.networkProtocolModule = "^.generic.gnp"
 **.gpsr.routingTableModule = "^.generic.routingTable"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
@@ -79,7 +79,7 @@ description = network layer for multiple network protocols
 **.hasIpv4 = true
 **.hasIpv6 = true
 **.hasGn = true
-**.networkLayerType = "GenericNetworkLayer"
+**.networkLayerType = "NextHopNetworkLayer"
 
 [Config MultiIPv4]
 extends = Random, _Multi, _IPv4
