travis: Add a moduletests and a unittests stage, running in debug MODE.

--- a/.travis.yml
+++ b/.travis.yml
@@ -108,4 +108,18 @@ jobs:
         - *DOCKER_COMMAND
       env: TARGET_PLATFORM=linux MODE=debug
 
+    - stage: moduletests
+      script:
+        - export STAGE=moduletests INNER_ARGS="" # not env, so it doesn't affect the cache key
+        - *DOCKER_COMMAND
+      env: TARGET_PLATFORM=linux MODE=debug
+    # TODO add release mode when the runner script supports it
+
+    - stage: unittests
+      script:
+        - export STAGE=unittests INNER_ARGS="" # not env, so it doesn't affect the cache key
+        - *DOCKER_COMMAND
+      env: TARGET_PLATFORM=linux MODE=debug
+    # TODO add release mode when the runner script supports it
+
 # "Look what you made me do", Travis.
