All: Renamed gnp submodule to nextHop.

--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -67,7 +67,7 @@ description = base for generic
 **.host[*].hasGn = true
 **.host[*].networkLayerType = "NextHopNetworkLayer"
 **.dymo.routingTableModule = "^.generic.routingTable"
-**.dymo.networkProtocolModule = "^.generic.gnp"
+**.dymo.networkProtocolModule = "^.generic.nextHop"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
 
 [Config Generic]
