ext: Renamed EmulationScheduler to RealTimeScheduler.

--- a/examples/emulation/pinger/omnetpp.ini
+++ b/examples/emulation/pinger/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-scheduler-class = "inet::EmulationScheduler"
+scheduler-class = "inet::RealTimeScheduler"
 network = ExtPinger
 
 cmdenv-express-mode = true
