--- a/examples/emulation/traceroute/omnetpp.ini
+++ b/examples/emulation/traceroute/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-scheduler-class = "inet::EmulationScheduler"
+scheduler-class = "inet::RealTimeScheduler"
 network = Traceroute
 sim-time-limit=50s
 
